versions/v1.3/modules/en/pages/virtual-machines/edit-vm.adoc
= Edit a Virtual Machine
:revdate: 2024-09-24
:page-revdate: {revdate}

== How to Edit a VM

After creating a virtual machine, you can edit your virtual machine by clicking the `⋮` button and selecting the `Edit Config` button.

[NOTE]
====
In addition to editing the description, a restart of the virtual machine is required for configuration changes to take effect.
====

=== Basics

On the basics tab, you can config your requested CPU and memory, a VM restart is required for this configuration to take effect.

SSH Keys are injected into the cloud-init script when the virtual machine is first powered on. In order for the modified ssh key to take effect after the virtual machine is startup, the cloud-init script needs to be xref:../troubleshooting/faq.adoc#_how_to_install_the_qemu_guest_agent_of_a_running_vm[reinstalled] from your guest OS.

image::vm/edit-vm-basics.png[edit-vm]

=== Networks

You can add additional VLAN networks to your VM instances after booting, the `management network` is optional if you have the VLAN network configured.

Additional NICs are not enabled by default unless you configure them manually in the guest OS, e.g. using https://doc.opensuse.org/documentation/leap/reference/html/book-reference/cha-network.html#sec-network-manconf[wicked for your OpenSUSE Server] or https://ubuntu.com/server/docs/network-configuration[netplan for your Ubuntu Server].

image::vm/edit-vm-networks.png[edit-vm]

For more details about the network implementation, please refer to the xref:../networking/vm-network.adoc[Networking] page.

=== Volumes

You can add additional volumes to the VM after booting. You can also expand the size of the volume after shutting down the VM, click the VM and go to the `Volumes` tab, edit the size of the expanded volume. After restarting the VM and waiting for the resize to complete, your disk will automatically finish expanding.

image::vm/edit-vm-volumes.png[edit-vm]

=== Access Credentials

Access Credentials allow you to inject basic auth or ssh keys dynamically at run time when your guest OS has QEMU guest agent installed.

For more details please check the page here: xref:./access-vm.adoc#_dynamic_ssh_key_injection_via_qemu_guest_agent[Dynamic SSH Key Injection via Qemu guest agent].
