versions/v1.7/modules/en/pages/virtual-machines/edit-vm.adoc
= Edit a Virtual Machine
:description: Edit a virtual machine by clicking the ⋮ button and selecting Edit Config to change settings like CPU, memory, and network configurations, then apply
:page-languages: [en, de, es, fr, ja, pt, zh]
:revdate: 2025-12-08
:page-revdate: {revdate}

== How to Edit a Virtual Machine

After creating a virtual machine, you can edit your virtual machine by clicking the `⋮` button and selecting the `Edit Config` button.

[NOTE]
====
In addition to editing the description, a restart of the virtual machine is required for configuration changes to take effect.
====

=== Basics

On the basics tab, you can config your requested CPU and memory, a virtual machine restart is required for this configuration to take effect.

SSH Keys are injected into the cloud-init script when the virtual machine is first powered on. In order for the modified ssh key to take effect after the virtual machine is startup, the cloud-init script needs to be xref:../troubleshooting/faq.adoc#_how_to_install_the_qemu_guest_agent_of_a_running_vm[reinstalled] from your guest OS.

image::vm/edit-vm-basics.png[edit-vm]

=== Networks

You can add additional VLAN networks to your virtual machine instances after booting, the `management network` is optional if you have the VLAN network configured.

Additional NICs are not enabled by default unless you configure them manually in the guest OS, e.g. using https://doc.opensuse.org/documentation/leap/reference/html/book-reference/cha-network.html#sec-network-manconf[wicked for your OpenSUSE Server] or https://ubuntu.com/server/docs/network-configuration[netplan for your Ubuntu Server].

If the virtual machine has one interface connected to the `mgmt` network and another connected to a different network (such as a VLAN), the node may be unable to reach the virtual machine's `mgmt` IP address. This connection issue occurs when the other network's gateway overrides the virtual machine's default route, resulting in routing that prefers the VLAN network for all inbound and outbound traffic, even traffic destined for the `mgmt` network.

image::vm/edit-vm-networks.png[edit-vm]

For more details about the network implementation, see xref:../networking/vm-network.adoc[Networking].

=== Volumes

You can add additional volumes to the virtual machine after booting. You can also expand the size of the volume after shutting down the virtual machine, click the virtual machine and go to the `Volumes` tab, edit the size of the expanded volume. After restarting the virtual machine and waiting for the resize to complete, your disk will automatically finish expanding.

[IMPORTANT]
====
If you are using external storage, ensure that the storage provider supports volume expansion before you resize volumes.
====

image::vm/edit-vm-volumes.png[edit-vm]

=== Access Credentials

Access Credentials allow you to inject basic auth or ssh keys dynamically at run time when your guest OS has QEMU guest agent installed.

For more information, see xref:./access-vm.adoc#_dynamic_ssh_key_injection_via_qemu_guest_agent[Dynamic SSH key injection via QEMU guest agent].
